force-app/main/default/objects/Progress_Flow_Details__c/Progress_Flow_Details__c.object-meta.xml
<CustomObject>
    <label>Progress Flow Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Flow Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>