force-app/main/default/objects/Progress_Flow_Details__c/fields/Activity_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Activity_Timeout__c</fullName>
    <label>Activity Timeout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 DAY</fullName>
            </value>
            <value>
                <fullName>2 DAYS</fullName>
            </value>
            <value>
                <fullName>5 DAYS</fullName>
            </value>
            <value>
                <fullName>7 DAYS</fullName>
            </value>
            <value>
                <fullName>10 DAYS</fullName>
            </value>
            <value>
                <fullName>15 DAYS</fullName>
            </value>
            <value>
                <fullName>18 DAYS</fullName>
            </value>
            <value>
                <fullName>30 DAYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>