force-app/main/default/objects/Progress_Flow_Details__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Progress Flow Details</relationshipLabel>
    <relationshipName>Progress_Flow_Details</relationshipName>
    <type>Lookup</type>
</CustomField>