force-app/main/default/objects/Progress_Flow_Details__c/fields/Progress_Flow__c.field-meta.xml
<CustomField>
    <fullName>Progress_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Flow</label>
    <referenceTo>Progress_Flow__c</referenceTo>
    <relationshipLabel>Progress Flow Details</relationshipLabel>
    <relationshipName>Progress_Flow_Details</relationshipName>
    <type>Lookup</type>
</CustomField>